name:                haskell-kdbx
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Main
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , cryptonite >= 0.25 && < 1
                     , bytestring >= 0.10.8.2 && < 0.11 
                     , cereal >= 0.5.7.0 && < 0.6
